ocio-sys/src/bridge.hpp

// --- Config ---
void* ocio_config_raw(void);
void* ocio_config_from_file(const char* path);
void* ocio_config_create_raw(void);
void* ocio_config_create_from_file(const char* path);
void* ocio_config_create_from_builtin_config(const char* configName);
void* ocio_config_create_from_env(void);
void* ocio_config_create_from_stream(const char* text);
void* ocio_config_create_from_config_io_proxy(void* ciop);
void ocio_config_destroy(void* handle);
int ocio_config_get_major_version(void* handle);
void ocio_config_set_major_version(void* handle, unsigned int major);
int ocio_config_get_minor_version(void* handle);
void ocio_config_set_minor_version(void* handle, unsigned int minor);
void ocio_config_set_version(void* handle, unsigned int major, unsigned int minor);
void ocio_config_upgrade_to_latest_version(void* handle);
void ocio_config_validate(void* handle);
void* ocio_config_get_name(void* handle);
void ocio_config_set_name(void* handle, const char* name);
char ocio_config_get_family_separator(void* handle);
char ocio_config_get_default_family_separator(void* handle);
void ocio_config_set_family_separator(void* handle, char separator);
void* ocio_config_get_description(void* handle);
void ocio_config_set_description(void* handle, const char* description);
void ocio_config_serialize(void* handle, void* os);
void* ocio_config_serialize_to_string(void* handle);
void* ocio_config_get_cache_id(void* handle);
void* ocio_config_get_cache_id_n(void* handle, void* context);
void* ocio_config_get_current_context(void* handle);
void ocio_config_add_environment_var(void* handle, const char* name, const char* defaultValue);
int ocio_config_get_num_environment_vars(void* handle);
void* ocio_config_get_environment_var_name_by_index(void* handle, int index);
void* ocio_config_get_environment_var_default(void* handle, const char* name);
void ocio_config_clear_environment_vars(void* handle);
void ocio_config_set_environment_mode(void* handle, int mode);
int ocio_config_get_environment_mode(void* handle);
void ocio_config_load_environment(void* handle);
void* ocio_config_get_search_path(void* handle);
void ocio_config_set_search_path(void* handle, const char* path);
int ocio_config_get_num_search_paths(void* handle);
void* ocio_config_get_search_path_by_index(void* handle, int index);
void ocio_config_clear_search_paths(void* handle);
void ocio_config_add_search_path(void* handle, const char* path);
void* ocio_config_get_working_dir(void* handle);
void ocio_config_set_working_dir(void* handle, const char* dirname);
void* ocio_config_get_color_spaces(void* handle, const char* category);
int ocio_config_get_num_color_spaces(void* handle, int searchReferenceType, int visibility);
void* ocio_config_get_color_space_name_by_index(void* handle, int searchReferenceType, int visibility, int index);
int ocio_config_get_num_color_spaces_v1(void* handle);
void* ocio_config_get_color_space_name_by_index_v1(void* handle, int index);
int ocio_config_get_index_for_color_space(void* handle, const char* name);
void* ocio_config_get_color_space(void* handle, const char* name);
void* ocio_config_get_canonical_name(void* handle, const char* name);
void ocio_config_add_color_space(void* handle, void* cs);
void ocio_config_remove_color_space(void* handle, const char* name);
bool ocio_config_is_color_space_used(void* handle, const char* name);
void ocio_config_clear_color_spaces(void* handle);
void ocio_config_set_inactive_color_spaces(void* handle, const char* inactiveColorSpaces);
void* ocio_config_get_inactive_color_spaces(void* handle);
bool ocio_config_is_inactive_color_space(void* handle, const char* colorspace);
bool ocio_config_is_color_space_linear(void* handle, const char* colorSpace, int referenceSpaceType);
void* ocio_config_identify_builtin_color_space(void* handle, void* srcConfig, void* builtinConfig, const char* builtinColorSpaceName);
void ocio_config_identify_interchange_space(void* handle, void* srcInterchangeName, void* builtinInterchangeName, void* srcConfig, const char* srcColorSpaceName, void* builtinConfig, const char* builtinColorSpaceName);
void ocio_config_set_role(void* handle, const char* role, const char* colorSpaceName);
int ocio_config_get_num_roles(void* handle);
bool ocio_config_has_role(void* handle, const char* role);
void* ocio_config_get_role_name(void* handle, int index);
void* ocio_config_get_role_color_space(void* handle, int index);
void* ocio_config_get_role_color_space_v1(void* handle, const char* roleName);
void* ocio_config_get_role_color_space_by_index(void* handle, int index);
void* ocio_config_get_role_color_space_by_name(void* handle, const char* roleName);
bool ocio_config_is_view_shared(void* handle, const char* dispName, const char* viewName);
void ocio_config_add_shared_view(void* handle, const char* view, const char* viewTransformName, const char* colorSpaceName, const char* looks, const char* ruleName, const char* description);
void ocio_config_remove_shared_view(void* handle, const char* view);
void ocio_config_clear_shared_views(void* handle);
void* ocio_config_get_default_display(void* handle);
int ocio_config_get_num_displays(void* handle);
void* ocio_config_get_display(void* handle, int index);
void* ocio_config_get_default_view(void* handle, const char* display);
void* ocio_config_get_default_view_v1(void* handle, const char* display, const char* colorspaceName);
int ocio_config_get_num_views(void* handle, const char* display);
void* ocio_config_get_view(void* handle, const char* display, int index);
int ocio_config_get_num_views_v1(void* handle, const char* display, const char* colorspaceName);
void* ocio_config_get_view_v1(void* handle, const char* display, const char* colorspaceName, int index);
bool ocio_config_are_views_equal(void* handle, void* first, void* second, const char* dispName, const char* viewName);
void* ocio_config_get_display_view_transform_name(void* handle, const char* display, const char* view);
void* ocio_config_get_display_view_color_space_name(void* handle, const char* display, const char* view);
void* ocio_config_get_display_view_looks(void* handle, const char* display, const char* view);
void* ocio_config_get_display_view_rule(void* handle, const char* display, const char* view);
void* ocio_config_get_display_view_description(void* handle, const char* display, const char* view);
bool ocio_config_has_view(void* handle, const char* dispName, const char* viewName);
void ocio_config_add_display_view_v1(void* handle, const char* display, const char* view, const char* colorSpaceName, const char* looks);
void ocio_config_add_display_view_v2(void* handle, const char* display, const char* view, const char* viewTransformName, const char* colorSpaceName, const char* looks, const char* ruleName, const char* description);
void ocio_config_add_display_shared_view(void* handle, const char* display, const char* sharedView);
void ocio_config_remove_display_view(void* handle, const char* display, const char* view);
void ocio_config_clear_displays(void* handle);
bool ocio_config_has_virtual_view(void* handle, const char* viewName);
bool ocio_config_is_virtual_view_shared(void* handle, const char* viewName);
void ocio_config_add_virtual_display_view(void* handle, const char* view, const char* viewTransformName, const char* colorSpaceName, const char* looks, const char* ruleName, const char* description);
void ocio_config_add_virtual_display_shared_view(void* handle, const char* sharedView);
int ocio_config_get_virtual_display_num_views(void* handle, int type);
void* ocio_config_get_virtual_display_view(void* handle, int type, int index);
bool ocio_config_are_virtual_views_equal(void* handle, void* first, void* second, const char* viewName);
void* ocio_config_get_virtual_display_view_transform_name(void* handle, const char* view);
void* ocio_config_get_virtual_display_view_color_space_name(void* handle, const char* view);
void* ocio_config_get_virtual_display_view_looks(void* handle, const char* view);
void* ocio_config_get_virtual_display_view_rule(void* handle, const char* view);
void* ocio_config_get_virtual_display_view_description(void* handle, const char* view);
void ocio_config_remove_virtual_display_view(void* handle, const char* view);