ocio-sys/src/lib.rs


    // --- Config ---
    pub fn ocio_config_raw() -> *mut c_void;
    pub fn ocio_config_from_file(path: *const i8) -> *mut c_void;
    pub fn ocio_config_create_raw() -> *mut c_void;
    pub fn ocio_config_create_from_file(path: *const i8) -> *mut c_void;
    pub fn ocio_config_create_from_builtin_config(configName: *const i8) -> *mut c_void;
    pub fn ocio_config_create_from_env() -> *mut c_void;
    pub fn ocio_config_create_from_stream(text: *const i8) -> *mut c_void;
    pub fn ocio_config_create_from_config_io_proxy(ciop: *mut c_void) -> *mut c_void;
    pub fn ocio_config_destroy(handle: *mut c_void);
    pub fn ocio_config_get_major_version(handle: *mut c_void) -> i32;
    pub fn ocio_config_set_major_version(handle: *mut c_void, major: u32) -> ();
    pub fn ocio_config_get_minor_version(handle: *mut c_void) -> i32;
    pub fn ocio_config_set_minor_version(handle: *mut c_void, minor: u32) -> ();
    pub fn ocio_config_set_version(handle: *mut c_void, major: u32, minor: u32) -> ();
    pub fn ocio_config_upgrade_to_latest_version(handle: *mut c_void) -> ();
    pub fn ocio_config_validate(handle: *mut c_void) -> ();
    pub fn ocio_config_get_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_name(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_config_get_family_separator(handle: *mut c_void) -> i8;
    pub fn ocio_config_get_default_family_separator(handle: *mut c_void) -> i8;
    pub fn ocio_config_set_family_separator(handle: *mut c_void, separator: i8) -> ();
    pub fn ocio_config_get_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_description(handle: *mut c_void, description: *const i8) -> ();
    pub fn ocio_config_serialize(handle: *mut c_void, os: *mut c_void) -> ();
    pub fn ocio_config_serialize_to_string(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_cache_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_cache_id_n(handle: *mut c_void, context: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_current_context(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_add_environment_var(
        handle: *mut c_void,
        name: *const i8,
        defaultValue: *const i8,
    ) -> ();
    pub fn ocio_config_get_num_environment_vars(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_environment_var_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_environment_var_default(
        handle: *mut c_void,
        name: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_clear_environment_vars(handle: *mut c_void) -> ();
    pub fn ocio_config_set_environment_mode(handle: *mut c_void, mode: i32) -> ();
    pub fn ocio_config_get_environment_mode(handle: *mut c_void) -> i32;
    pub fn ocio_config_load_environment(handle: *mut c_void) -> ();
    pub fn ocio_config_get_search_path(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_search_path(handle: *mut c_void, path: *const i8) -> ();
    pub fn ocio_config_get_num_search_paths(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_search_path_by_index(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_clear_search_paths(handle: *mut c_void) -> ();
    pub fn ocio_config_add_search_path(handle: *mut c_void, path: *const i8) -> ();
    pub fn ocio_config_get_working_dir(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_working_dir(handle: *mut c_void, dirname: *const i8) -> ();
    pub fn ocio_config_get_color_spaces(handle: *mut c_void, category: *const i8) -> *mut c_void;
    pub fn ocio_config_get_num_color_spaces(
        handle: *mut c_void,
        searchReferenceType: i32,
        visibility: i32,
    ) -> i32;
    pub fn ocio_config_get_color_space_name_by_index(
        handle: *mut c_void,
        searchReferenceType: i32,
        visibility: i32,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_num_color_spaces_v1(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_color_space_name_by_index_v1(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_index_for_color_space(handle: *mut c_void, name: *const i8) -> i32;
    pub fn ocio_config_get_color_space(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_config_get_canonical_name(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_config_add_color_space(handle: *mut c_void, cs: *mut c_void) -> ();
    pub fn ocio_config_remove_color_space(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_config_is_color_space_used(handle: *mut c_void, name: *const i8) -> bool;
    pub fn ocio_config_clear_color_spaces(handle: *mut c_void) -> ();
    pub fn ocio_config_set_inactive_color_spaces(
        handle: *mut c_void,
        inactiveColorSpaces: *const i8,
    ) -> ();
    pub fn ocio_config_get_inactive_color_spaces(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_is_inactive_color_space(handle: *mut c_void, colorspace: *const i8) -> bool;
    pub fn ocio_config_is_color_space_linear(
        handle: *mut c_void,
        colorSpace: *const i8,
        referenceSpaceType: i32,
    ) -> bool;
    pub fn ocio_config_identify_builtin_color_space(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        builtinConfig: *mut c_void,
        builtinColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_identify_interchange_space(
        handle: *mut c_void,
        srcInterchangeName: *mut c_void,
        builtinInterchangeName: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        builtinConfig: *mut c_void,
        builtinColorSpaceName: *const i8,
    ) -> ();
    pub fn ocio_config_set_role(
        handle: *mut c_void,
        role: *const i8,
        colorSpaceName: *const i8,
    ) -> ();
    pub fn ocio_config_get_num_roles(handle: *mut c_void) -> i32;
    pub fn ocio_config_has_role(handle: *mut c_void, role: *const i8) -> bool;
    pub fn ocio_config_get_role_name(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_get_role_color_space(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_get_role_color_space_v1(
        handle: *mut c_void,
        roleName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_role_color_space_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_role_color_space_by_name(
        handle: *mut c_void,
        roleName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_is_view_shared(
        handle: *mut c_void,
        dispName: *const i8,
        viewName: *const i8,
    ) -> bool;
    pub fn ocio_config_add_shared_view(
        handle: *mut c_void,
        view: *const i8,
        viewTransformName: *const i8,
        colorSpaceName: *const i8,
        looks: *const i8,
        ruleName: *const i8,
        description: *const i8,
    ) -> ();
    pub fn ocio_config_remove_shared_view(handle: *mut c_void, view: *const i8) -> ();
    pub fn ocio_config_clear_shared_views(handle: *mut c_void) -> ();
    pub fn ocio_config_get_default_display(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_num_displays(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_display(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_get_default_view(handle: *mut c_void, display: *const i8) -> *mut c_void;
    pub fn ocio_config_get_default_view_v1(
        handle: *mut c_void,
        display: *const i8,
        colorspaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_num_views(handle: *mut c_void, display: *const i8) -> i32;
    pub fn ocio_config_get_view(handle: *mut c_void, display: *const i8, index: i32)
        -> *mut c_void;
    pub fn ocio_config_get_num_views_v1(
        handle: *mut c_void,
        display: *const i8,
        colorspaceName: *const i8,
    ) -> i32;
    pub fn ocio_config_get_view_v1(
        handle: *mut c_void,
        display: *const i8,
        colorspaceName: *const i8,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_are_views_equal(
        handle: *mut c_void,
        first: *mut c_void,
        second: *mut c_void,
        dispName: *const i8,
        viewName: *const i8,
    ) -> bool;
    pub fn ocio_config_get_display_view_transform_name(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_display_view_color_space_name(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_display_view_looks(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_display_view_rule(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_display_view_description(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_has_view(
        handle: *mut c_void,
        dispName: *const i8,
        viewName: *const i8,
    ) -> bool;
    pub fn ocio_config_add_display_view_v1(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
        colorSpaceName: *const i8,
        looks: *const i8,
    ) -> ();
    pub fn ocio_config_add_display_view_v2(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
        viewTransformName: *const i8,
        colorSpaceName: *const i8,
        looks: *const i8,
        ruleName: *const i8,
        description: *const i8,
    ) -> ();
    pub fn ocio_config_add_display_shared_view(
        handle: *mut c_void,
        display: *const i8,
        sharedView: *const i8,
    ) -> ();
    pub fn ocio_config_remove_display_view(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> ();
    pub fn ocio_config_clear_displays(handle: *mut c_void) -> ();
    pub fn ocio_config_has_virtual_view(handle: *mut c_void, viewName: *const i8) -> bool;
    pub fn ocio_config_is_virtual_view_shared(handle: *mut c_void, viewName: *const i8) -> bool;
    pub fn ocio_config_add_virtual_display_view(
        handle: *mut c_void,
        view: *const i8,
        viewTransformName: *const i8,
        colorSpaceName: *const i8,
        looks: *const i8,
        ruleName: *const i8,
        description: *const i8,
    ) -> ();
    pub fn ocio_config_add_virtual_display_shared_view(
        handle: *mut c_void,
        sharedView: *const i8,
    ) -> ();
    pub fn ocio_config_get_virtual_display_num_views(handle: *mut c_void, type_param: i32) -> i32;
    pub fn ocio_config_get_virtual_display_view(
        handle: *mut c_void,
        type_param: i32,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_are_virtual_views_equal(
        handle: *mut c_void,
        first: *mut c_void,
        second: *mut c_void,
        viewName: *const i8,
    ) -> bool;
    pub fn ocio_config_get_virtual_display_view_transform_name(
        handle: *mut c_void,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_virtual_display_view_color_space_name(
        handle: *mut c_void,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_virtual_display_view_looks(
        handle: *mut c_void,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_virtual_display_view_rule(
        handle: *mut c_void,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_virtual_display_view_description(
        handle: *mut c_void,
        view: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_remove_virtual_display_view(handle: *mut c_void, view: *const i8) -> ();
